--- a/expose.tex
+++ b/expose.tex
@@ -147,6 +147,7 @@
 \newcommand{\sca}{static code analysis }
 \newcommand{\Sca}{Static code analysis }
 \newcommand{\pra}{privacy risk assessment }
+\newcommand{\prfs}{privacy risk factors }
 
 \pagenumbering{Roman}
 
@@ -191,34 +192,31 @@ More and more \mH apps are available that support the users in resolving their h
 Users are asked to expose their personal health related information, in order to receive a tailored app that fits their preferences.\footnote{See \cite{Chen2012}, p. 2.}
 The users reveal vulnerable information about their health status, while it remains mostly unclear how and where the data is sent, processed and stored.\footnote{See \cite{He2014}, p. 652.}
 
-The information about these privacy related practices of \ap s and their offered apps should be stated in the privacy policy document, provided by the \ap.
+The information about these privacy related practices of app providers and their offered apps should be stated in the privacy policy document, provided by the app provider.
 Processing these \pps requires a higher level of education and time to read through large bodies of text, in order to find the relevant information. 
-Additionally, the important information is hidden in legal language or insufficiently addressed, if at all.\footnote{This paragraph follows \cite{Dehling2014}, p. 11.}
+Additionally, the important information is hidden in legal language or is  insufficiently addressed, if at all.\footnote{This paragraph follows \cite{Dehling2014}, p. 11.}
 
 Aside from the data usage beyond the control of the users, it is also challenging for users to assess what kind of private information an app asks for, prior to the app usage. 
 Users have to download the apps of interest and try them out, before it becomes clear what health related information is processed by the app and in what way. 
 This leads to low inter comparability between apps. 
 If users are looking for specific functionality in an \mH app, it is challenging to find the app that offers the desired functionality at an acceptable privacy risk. 
 Even if users would pursue the task of finding and comparing \mH apps of similar functionality, the high volume of apps available on the app stores\footnote{See \cite{Enck2011}, p. 1.} makes it laborious to review all of them by hand.
+One way to assess privacy risks of the large amount of \mH apps is to automate the review process of each individual app. 
 
-Resolving the challenges in evaluating the privacy risk of large volumes of \mH apps, before usage, will result in an improved decision making process for users. 
-Users will be able to make app usage decisions based on an actual privacy risk measure that empowers comparability and the danger of exposing vulnerable information is reduced. 
-One way to assess privacy risks of \mH apps is to automate the review process of each individual app. 
-
-A means to overcome the challenge of reviewing large amounts of \mH apps is by automating the assessment.
-Automating the review process for large scale app assessments even has the potential to grow new privacy evaluation service markets.\footnote{See \cite{Enck2011}, p. 14.}
+Automating the assessment of \mH apps is a way to overcome the challenge of reviewing large amounts of \mH apps.
 The assessment automation can be done by downloading and analyzing the source code of each app and by tracing data leaks. 
-\Sca is used in the field of informatics, to analyse application source code and detect faults or vulnerabilities.\footnote{See \cite{Baca2008}, p. 79.} 
-A \sca could be used to automatically assess the privacy risks that \mH apps pose.
-It is unclear if, and to what degree, the concepts of \sca and \pra can be combined in order to automate the app assessment.
+\Sca is used in the field of informatics to analyse application source code and detect faults or vulnerabilities.\footnote{See \cite{Baca2008}, p. 79.} 
+A \sca could, in theory, be used to automatically assess some of the privacy risks that \mH apps pose.
+It is yet unclear if and to what degree the concepts of \sca and \pra can be combined in order to automate the app assessment.
+Previous research has not shown if the combination of \sca is feasible in the field of \mH app \pra and therefore the aim of this study is to explore the possibilities of static code analysis. 
 This leads to the research question of this master thesis: How and to what degree can the privacy risk assessment of mHealth apps be automated?
 
-The automated process helps to reduce the costs of reviewing each individual app drastically and enhances the information experience users receive while researching mHealth apps.Additionally, it exposes new possibilities for research in the privacy risk area. The research could be conducted on providing solutions and best practices for minimizing the privacy risk of apps.
+The automated process furthermore helps to reduce the costs of reviewing each individual app drastically and enhances the information experience users receive while researching mHealth apps.Additionally, it exposes new possibilities for research in the privacy risk area. The research could be conducted on providing solutions and best practices for minimizing the privacy risk of apps.
 
 % RELATED WORK %
 \section{Related Work}
-\mH apps have been subject of various research studies, that aim at providing insights for developers as well as users into how private information is processed.
-First of all \cite{Khalid2015} found out that privacy issues are the number one most impactful user complaint while using mobile apps.\footnote{See \cite{Khalid2015}, p. 5.}
+\mH apps have been examined in various research studies, that aim at providing insights for developers as well as users into how private information is processed.
+\cite{Khalid2015} found out that privacy issues are the number one most impactful user complaint while using mobile apps.\footnote{See \cite{Khalid2015}, p. 5.}
 This encourages research to address privacy risks and data leaks.
 \cite{He2014} analyzed the top 160 free Android \mH apps by potential attack points to users' private data. They focus on the technical side of privacy risks, for example the storage of \mH data in internal Android log files or the storage card used within the phone or tablet.\footnote{For the previous two sentences, see \cite{He2014}, p. 645-646.}
 \cite{Mcclurg2012} study Android data leaks on a technical level and apply decompilation tools to automate the leak detection process, rather than reviewing apps manually by hand. They found out that Android apps leak private information, e.g. the device identification, to app provider servers.\footnote{See \cite{Mcclurg2012}, p. 1, 5.}
@@ -232,25 +230,16 @@ Our study will combine the decompilation steps of \cite{Enck2011} with a detaile
 % OBJECTIVES %
 \section{Objectives}
 
-The main objective of this study is to ascertain how or to what degree the assessment of privacy risk factors for \mH apps can be automated.
-This will be reached by following the sub-objectives
+The main objective of this study is to ascertain how and to what degree the assessment of privacy risk factors for \mH apps can be automated.
+In order to reach this objective, the following sub-objectives have to be met.
 
-As a secondary objective of this study, an evaluation of the privacy risk assessment tool, including an overview of the users’ opinions regarding the potential impact of the tool on their mHealth app decision making, will be given.
+The first sub-objective is to download and decompile as many Android apps as possible. This step is necessary to gain access to the app source code for further evaluation.
+After decompilation, the second sub-objective is to apply \sca to identify \prfs within the apps' source code. It is yet unclear if and to what degree \sca can be used to identify \prfs of \mH apps.
+As a third sub-objective of this study, an evaluation of the privacy risk assessment tool, including an overview of the users’ opinions regarding the potential impact of the tool on their mHealth app decision making, will be given.
 
 % DEFINITIONS %
 \section{Definitions}
 Certain terms are used in the remainder of this thesis that have to be defined:
-
-% Mobile health apps
-\subsection{Mobile Health Apps}
-
-Mobile health (\acs{mHealth}) apps are smartphone or tablet applications that support users by enabling them to gather health related information and support the consumer in medical or health related issues.\footnote{See \cite{Dehling2015b}, p. 1.}
-
-% Static code analysis %
-\subsection{Static Code Analysis}
-
-Static code analysis refers to the analysis of an applications source code without actually executing the application. 
-This technique is widely used to detect vulnerabilities or to validate the source code during development in the sourcecode editor software. \footnote{See \cite{bardas2010static}, p. 2-3.}
 
 % Decompilation %
 \subsection{Decompilation}
@@ -259,6 +248,21 @@ Compilers transfer human readable programming code into machine code and therefo
 Decompilers retrieve the human readable programming code back from the compiled machine code. 
 The compilation process of an application is non-reversible. Therefore, decompiling is a reverse engineering technique that outputs source code, similar to the original source code of the application, but with the same functionality.  
 \footnote{This section follows \cite{nolan2012decompiling}, p. 1-2.}
+
+% Mobile health apps
+\subsection{Mobile Health Apps}
+
+Mobile health (\acs{mHealth}) apps are smartphone or tablet applications that support users by enabling them to gather health related information and support the consumer in medical or health related issues.\footnote{See \cite{Dehling2015b}, p. 1.}
+
+% Privacy Risk Factr %
+\subsection{Privacy Risk Factor}
+A privacy risk factor of an app is a factor or a circumstance that increases the risk of private user data being leaked. An example for a privacy risk factor is the usage of an unencrypted HTTP data connection. 
+
+% Static code analysis %
+\subsection{Static Code Analysis}
+
+Static code analysis refers to the analysis of an applications source code without actually executing the application. 
+This technique is widely used to detect vulnerabilities or to validate the source code during development in the sourcecode editor software. \footnote{See \cite{bardas2010static}, p. 2-3.}
 
 % METHODS %
 \section{Methods}
@@ -279,10 +283,10 @@ The Google PlayStore on the other hand hosts Android application in \acs{APK} co
 In order to automate the download process of \acs{APK} files to our local computer, we make use of an undocumented Google \acs{API} that reveals access to the \acs{APK} files from the Google PlayStore. 
 The \acs{API} can be queried by sending an Android device id, pretending to be a requesting Android device. It is used by the Google PlayStore internally and the result of the query is the binary \acs{APK} file.
 
-To get an overview of the APK files available on the Google PlayStore, we use the repository of app listings by \cite{Xu2015} that was extracted from the Google PlayStore from the categories "Health \& Fitness" and "Medical".
+To get an overview of the APK files available on the Google PlayStore, we use the repository of app listings by \cite{Xu2015} that was extracted from the Google PlayStore from the categories 'Health \& Fitness' and 'Medical'.
 Due to the obstacles of gaining access to the Apple iOS binary files, we restrict the dataset to the available Android apps and conduct our automated privacy risk assessment on these apps.
 The \cite{Xu2015} dataset contains 5,379 Android apps. 
-We exclude paid apps from our study. Downloading paid apps would charge the credit card of the authors, since we use the same \acs{API} that the Google PlayStore itself uses to purchase apps on Android devices. 
+We exclude paid apps from our study. Downloading paid apps would charge the credit card of the authors since we use the same \acs{API} that the Google PlayStore itself uses to purchase apps on Android devices. 
 Downloading all 5,379 apps would result in a purchase value of 19,904.24 US-dollars. 
 Therefore, we reduce the dataset to the 3,180 free apps, which is still 59.1\% of the apps from the initial dataset. 
 We will download as many of these 3,180 apps as possible.
@@ -321,14 +325,15 @@ The XML files are of interest for the automated privacy risk analysis, because A
 In order to analyse potential privacy risks, we are going to use a static code analysis tool.
 This tool will scan and parse the Java source code files and make them processable for further analysis.
 
+The \sca tool will not be able to identify new \prfs by itself, but rather has to be individually programmed to scan the source code for privacy risk factors.
 \cite{Bruggemann2016} identified six potential privacy risk factors that a \mH app can pose and combined them into a privacy risk index equation. 
+We will focus on identifying these \prfs with our \sca tool.
 The six factors contain three binary factors.
 The first binary factor is the question, whether an app requires a login via username/email or a social media login service such as Facebook, Twitter or Google+. 
 The second binary factor asks, if the app uses secured \acs{HTTP} connections to the servers it is communicating too.
 While the first two binary factors can be assessed at a reasonable level of difficulty via static code analysis, it is challenging to do so for third binary factor, the reasonableness of personal data collection. 
-The reasonableness of personal data collection assessment in the study of \cite{Bruggemann2016} was based on usage observation of the app. This might not be feasible for a static code analysis. 
-%Our research will find out to what degree it will be possible to evaluate how reasonable the data collection is.
-\todo{Das kann dann jeder Nutzer überlassen}
+The reasonableness of personal data collection assessment in the study of \cite{Bruggemann2016} was based on usage observation of the app. 
+Since this is not feasible to be detected by a static code analysis, we will leave the reasonableness assessment to the users of our tool. 
 
 The non-binary factors include the categories of personal data that users have to input into the \mH apps. Examples of personal data categories are the medication intake, symptoms or vital values.
 The last two privacy risk factors express the target to which the personal data is likely to be sent. 
@@ -338,10 +343,10 @@ To what extent the inclusion of ad services or analytics tracks the user data is
 The second data target factor tries to observe immediate data connections after personal data input. 
 \cite{Bruggemann2016} observed that personal data might be sent to a server of the app provider, advertisement or marketing companies, social media networks (such as Facebook) or to research projects.\footnote{This section follows \cite{Bruggemann2016}, p. 7-9.}
 
-Our study aims at identifying the privacy risk factors identified by \cite{Bruggemann2016} by automatically scanning the source code of each app in our working dataset. 
+Our study aims at exemplary identifying the privacy risk factors identified by \cite{Bruggemann2016} by automatically scanning the source code of each app in our working dataset. 
 
 % LOGIN %
-In order to identify whether an app requires the users to login, the source code will be scanned for text input fields that are labelled with the substrings "login", "register", "password". 
+In order to identify whether an app requires the users to login, the source code will be scanned for text input fields that are labelled with the substrings 'login', 'register', 'password'. 
 Additionally, the source code will be scanned for social network login buttons.
 They can be identified by the button classname \textit{com.facebook.login.widget.LoginButton} for Facebook login, \textit{com.twitter.sdk.android.core.identity.TwitterLoginButton} for Twitter login functionality and \textit{SignInButton} for Google login.
 % SSL %
@@ -349,8 +354,8 @@ Android uses a \textit{RequestQueue} to dispatch HTTP requests from the main thr
 We will scan the source code for requests that are added to the \textit{RequestQueue} and trace the url, that is the request target, back, until we can check if the target web address contains a secure HTTPS prefix.
 This indicates an encrypted connection.
 % DATA TARGET %
-The targets web addresses, that requests are made to, also indicate the personal data target factor. The web address domain name usually points out if the web request is made to the app providers server (usually the company name, or alike) or e.g. to a click analytics service.
-Especially if variables that were assigned through user input fields can be traced until they are sent out in web request.
+The targets web addresses, that requests are made to, also indicate the personal data target factor. The web address domain name usually points out if the web request is sent to the app providers server (usually the company name, or alike) or e.g. to a click analytics service.
+These web requests are of special interest if user input data is transmitted.
 % DATA CATEGORIES %
 In order to identify the individual text fields that call for user input, two source code scanning strategies need to be used.
 The Android \textit{EditText} classes can either be declared within the layout \acl{XML} (\acs{XML}) file or added via Java code during application runtime.
@@ -358,9 +363,9 @@ In both cases the label and ID properties of the \textit{EditText} instance can 
 As soon as we get an overview of the \textit{EditText} labels, we are going to cluster them into the personal data categories proposed by \cite{Bruggemann2016}.
 At this point it would be possible to train a naive Bayes classifier, to segment the individual data input text field labels to the personal data categories.
 % UNSPECIFIC DATA TARGETS %
-To identify if analytics or advertisement services are used within the app, we can scan the source code for the inclusion of corresponding libraries. For example, the Google Analytics\footnote{https://www.google.com/analytics/, visited 02/05/2015.} library is used within Android source code by including the library package \textit{com.google.android.gms.analytics.GoogleAnalytics}.
+To identify if analytics or advertisement services are used within the app, we can scan the source code for the inclusion of corresponding libraries. For example, the Google Analytics\footnote{https://web.archive.org/web/20160205060303/https://www.google.com/analytics/, visited cached version on 02/05/2016.} library is used within Android source code by including the library package \textit{com.google.android.gms.analytics.GoogleAnalytics}.
 
-After the implementation is completed, the explored privacy risk factors will be combined into the privacy risk index weighted-sum equation, proposed by \cite{Bruggemann2016} and will be displayed within a user interface.\footnote{See\cite{Bruggemann2016}, p. 10, 15-16.}
+After the implementation is completed, the explored privacy risk factors will be combined into the privacy risk index weighted-sum equation, proposed by \cite{Bruggemann2016} and will be displayed within a user interface.\footnote{See \cite{Bruggemann2016}, p. 10, 15-16.}
 This enables the \mH apps to be compared, regarding their privacy risk.
 
 \subsection{Evaluation}
@@ -368,13 +373,13 @@ This enables the \mH apps to be compared, regarding their privacy risk.
 First, we want to evaluate the degree of privacy risk assessment automation that has been accomplished. 
 The evaluation will be based on the feasibility and obstacles detected in implementing the automated privacy risk assessment. We will outline which privacy risk factors can be detected automatically and which factors can not, as well as the reasons for this.
 
-Using the \cite{Bruggemann2016} user interface allows users to explore and compare \mH apps in a table view format. 
+The \cite{Bruggemann2016} user interface allows users to explore and compare \mH apps in a table view format. 
 It can be used in addition to downloading apps from the Google PlayStore.
 
 In order to further evaluate the automated privacy risk assessment and its impact on users, we will expose 15 potential users to the user interface and let them discover our detected privacy risks.
+The 15 users will be interviewed in terms of their experience using the \pra tool. 
+The interview questions will ask the users about their perception on the impact such a tool, and the information it provides, has on the app store usage.
 We will then give an overview of the users' options towards the presence of enhanced privacy risk information, that might change the users decision making process regarding the selection of \mH apps.
-
-\todo{Was machen die Nutzer?}
 
 % STRUCTURE %
 \section{Structure}
@@ -405,23 +410,23 @@ In this section we would like to introduce the structure of the final thesis cha
     
     3.2.3 Static Code Analysis Phase & Information on the different approaches to gather information on individual privacy risk factors, explained in chapter 2.1. We will try to identify via the static code analysis, if the \mH app requires a login to tailor the user experience or not. Furthermore, we want to find out if personal health data is collected and if so, what kind of data. Via source code analysis we aim at identifying the targets, where data is sent and if advertisement or click-analytics services are used.\\\hline
     
-    3.3 User Interviews & blabla \\\hline\hline
+    3.3 User Interviews & Describing how we interview the 15 users regarding their opinions on the automated privacy risk assessment.\\\hline\hline
     
-    4 Results & Explaining the outcome of the implementation step. How many apps could be automatically assessed? How many factors could be automatically identified? Was it possible to compute information on all of the privacy risk factors from chapter 2.1?\\\hline\hline
+    4 Results &  How many apps could be automatically assessed? How many factors could be automatically identified? Was it possible to compute information on all of the privacy risk factors from chapter 2.1?\\\hline\hline
     
-    4.1 Privacy Risk Index & bla \\\hline
+    4.1 Privacy Risk Factors & Results on what privacy risk factors are identifiable via \sca\\\hline
     
-    4.2 Implementation & bla \\\hline
+    4.2 Implementation & Explaining the outcome of the implementation step. \\\hline
     
-    4.2.1 Download Phase & \\\hline
+    4.2.1 Download Phase & Results on how many \mH apps could be downloaded and how the download phase went. \\\hline
     
-    4.2.2 Decompilation Phase & \\\hline
+    4.2.2 Decompilation Phase & Results on how many \mH could be decompiled and at what degree of quality.\\\hline
     
-    4.2.3 Static Code Analysis Phase & \\\hline
+    4.2.3 Static Code Analysis Phase & Results on the outcome of the \sca\\\hline
         
     4.3 User Interviews & Further evaluation of the automated privacy risk assessment tool is given by presenting an overview of the users' options on the tool. We will expose 15 users with the tool and share their option on the implications this tool has on \mH app decision making.\\\hline\hline
 
-    5 Discussion & A critical reflection on the thesis. Were all the objectives reached and are the methods used coherent? \\\hline
+    5 Discussion &  \\\hline
     
     5.1 Evaluation of Implementation & Information on the feasibility of implementing an automated \mH privacy risk assessment tool, the challenges and obstacles. \\\hline
     
@@ -429,27 +434,24 @@ In this section we would like to introduce the structure of the final thesis cha
     
     5.3 Future Research & This section will provide hints to future researchers on how to continue or extend the current study in this thesis and further develop the implemented tool and its implications.\\\hline
     
-    5.4 Conclusion & Test. \\\hline
+    5.4 Conclusion & A critical reflection on the thesis. Were all the objectives reached and are the methods used coherent? \\\hline
 \end{longtable}
 
 
 % EXPECTED RESULTS %
 \section{Expected Results}
+The results of this master thesis will be the implementation of the automated \pra tool and an evaluation of the users' options on the usage of the automated privacy risk assessment tool.
+Part of the expected results will be the answer to the question, if \sca is a viable tool to assess privacy risk factors of \mH apps.
 
-As a result of this master thesis, we expect the implementation process of the automated privacy risk assessment to be at least partially feasible and implemented. 
+We expect the implementation process of the automated privacy risk assessment to be at least partially feasible and implemented. 
 Automating the downloading process of \acs{APK} app files from the Google PlayStore is possible to a certain extent, and will be provided.
 The decompilation process is expected to gain at least a code recovery rate of above 90\%.\footnote{See \cite{Enck2011}, p. 5-6.} 
 Therefore, we expect the majority of \acs{APK} files to be assessable.
 We expect the static code analysis for privacy risk factors to be successful for the majority of factors and will provide insights into the possible degree of detail.
 
-Another anticipated result is an overview of the users' options on the usage of the automated privacy risk assessment tool. 
-Depending on the implementation success it will reveal to be either useful or rather useless to the users decision making process regarding \mH apps.
-
-\todo{Was kommt am Ende raus?}
-
 % PROBLEMS %
 \section{Problems}
-So far there is no problem.
+So far there are no problems.
 
 % --------------------
 % REFERENCES
