--- a/expose.tex
+++ b/expose.tex
@@ -301,7 +301,7 @@ The first step is to recover a java archive (\acs{JAR}) file from the \acs{APK} 
 \acs{JAR} files contain a collection of .class files. 
 These .class files hold Java bytecode that can be interpreted by the Java virtual machine (\acs{JVM}) at application runtime.\footnote{The previous two sentences follow \cite{Enck2011}, p. 2.} 
 In order to extract the Java bytecode .class files, we use the command line tool \textit{dex2jar}\footnote{\cite{Pan2010}.}. 
-The abbreviation \acs{DEX} stands for \acl{DEX} and refers to the binary collection of compiled Java classes within the \acs{APK} package file.\footnote{See \cite{xu2013}, p. 6}.
+The abbreviation \acs{DEX} stands for \acl{DEX} and refers to the binary collection of compiled Java classes within the \acs{APK} package file.\footnote{See \cite{xu2013}, p. 6.}.
 
 Step two includes the actual decompiling phase of the Java bytecode back into .java files. 
 A .java file contains exactly one Java \textit{class} in human-readable Java code. 
