Nach Kolloqium Änderungen

--- a/titlepages/cover.tex
+++ b/titlepages/cover.tex
@@ -11,7 +11,7 @@ Thomas Brüggemann
 \textbf{
     Master Thesis
 \linebreak
-    im Fach Allgemeine Wirtschaftsinformatik}
+    im Fach Information Systems}
 \end{center}
 
 \vspace*{20mm}
@@ -19,14 +19,14 @@ Thomas Brüggemann
 % Titel
 \begin{center}
 \LARGE 
-    Automating the Privacy Risk Assessment of mHealth Apps
+    Automated Information Privacy Risk Assessment of Android Health Applications
 \end{center}
 
 \vspace*{8mm}
 
 % Themensteller
 \begin{center}
-    Themensteller: Jun.-Prof. Dr. Ali Sunyaev
+    Themensteller: Prof. Dr. Ali Sunyaev
 \end{center}
 
 \vspace*{12mm}
