--- a/expose.tex
+++ b/expose.tex
@@ -269,8 +269,8 @@ Mobile health (\acs{mHealth}) apps are smartphone or tablet applications that su
 % Information Privacy Risk Factor %
 \subsection{Information Privacy Risk Factor}
 An information privacy risk factor is an indicator of a potential threat or a circumstance that increases the risk of an information privacy breach.
-Information privacy is defined as the fact that people are able to control if, how and where information and knowledge about themselves is gathered, stored and processed \footnote{See \cite{Fischer1998}, p. 421-422.}.
-Additionally society and social structure must establish an information regulation architecture that allows people to enforce their information privacy rights \footnote{\cite{Solove2002}, p. 1115.}.
+Information privacy is defined as the fact that people are able to control if, how and where information and knowledge about themselves is gathered, stored and processed.\footnote{See \cite{Fischer1998}, p. 421-422.}
+Additionally society and social structure must establish an information regulation architecture that allows people to enforce their information privacy rights.\footnote{\cite{Solove2002}, p. 1115.}
 Threats to information privacy in digital services can happen at application level (e.g. by sharing users' personal information with third-parties), as well as at communication level (e.g. by using an unencrypted data connection).\footnote{See \cite{Fischer1998}, p. 423-427.}
 % Static code analysis %
 \subsection{Static Code Analysis}
@@ -360,8 +360,8 @@ We will outline which \iprfs can and can not be detected automatically, as well 
 Furthermore, we will evaluate for which \prfs the automated \sca is superior to using manual assessment techniques.
 
 For evaluation of the accuracy of automated \sca of the apps, we will look at a selection of 15 apps in greater detail and manually review the results of the static code analysis.
-The manual assessment of the test app sample will be conducted by two researchers individually and the results will be presented.
-We will assess if the \sca managed to identify all of the prevailing \ipr within the app and if not, what the reasons for failure are.
+The manual assessment of the test app sample will be conducted by two researchers individually on the same set of 15 test apps.
+We will assess if the \sca managed to identify all of the prevailing \ipr that a human can identify within the app and if not, what the reasons for failure are.
 This will give a sense of how well the \sca performs in identifying the information privacy risks in comparison to a human reviewer.
 
 % STRUCTURE %
@@ -383,9 +383,9 @@ In this section we would like to introduce the structure of the final thesis cha
     
     2.1 Information Privacy Risk Assessment & Overview of literature that already covered the topics of \ipr assessent.\\\hline
     
-    2.2 Static Code Analysis & Overview of literature concerning static code analysis in use as a code analysis tool in the field of informatics.\\\hline
+    2.2 Static Code Analysis & Overview of literature concerning static code analysis as an analysis tool in the field of informatics.\\\hline
         
-    2.3 Relevant Information Privacy Risk Factors & Introducing the \cite{Dehling2016} \ipp and filtering out the ones that pose an information privacy risk.\\\hline
+    2.3 Relevant Information Privacy Risk Factors & Introducing the \cite{Dehling2016} \ipp and filtering out the ones that can pose an information privacy risk.\\\hline
     
     3 Implementation and Evaluation of an Automated Information Privacy Risk Assessment Tool & This chapter describes the main implementation phase of the automated \pra tool.\\\hline
     
