--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -1,21 +1,15 @@
 % Abkürzungsverzeichnis
-\section*{Abkürzungsverzeichnis}
-\addcontentsline{toc}{section}{Abkürzungsverzeichnis}
+\section*{Index of Abbreviations}
+\addcontentsline{toc}{section}{Index of Abbreviations}
 \begin{acronym}[TTTTTTTTTTTTTTTTTTTT]
-    \acro{API}{Application Programming Interface}
-    \acro{AWS}{Amazon Web Services}
-    \acro{CRM}{Customer-Relationship-Management}
-    \acro{DLV}{Dienstleistungsvereinbarung}
-    \acro{EC2}{Elastic Compute Cloud}
-    \acro{IaaS}{Infrastructure as a Service}
-    \acro{KNN}{Künstliches neuronales Netz}
-    \acro{MaaS}{Monitoring as a Service}
-    \acro{PaaS}{Platform as a Service}
-    \acro{S3}{Simple Storage Service}
-    \acro{SaaS}{Software as a Service}
-    \acro{SQL}{Structured Query Language}
-    \acro{USDL}{Unified Service Description Language}
-    \acro{XaaS}{Everything as a Service}
+	\acro{API}{Application Programming Interface}
+	\acro{APK}{Android Application Package}
+	\acro{DEX}{Dalvik Executable}
+	\acro{DRM}{Digital Rights Management}
+	\acro{HTTP}{Hypertext Transfer Protocol}
+	\acro{JAR}{Java Archive}
+	\acro{JVM}{Java Virtual Machine}
+    \acro{mHealth}{Mobile Health}
     \acro{XML}{Extensible Markup Language}
 \end{acronym}
 \newpage
