--- a/main.tex
+++ b/main.tex
@@ -146,6 +146,7 @@
 \newcommand{\iprs}{information privacy risk score }
 \newcommand{\gui}{graphical user interface }
 \newcommand{\ipp}{information privacy practices }
+\newcommand{\aiprat}{automated information privacy risk assessment tool }
 
 \pagenumbering{Roman}
 
