--- a/main.tex
+++ b/main.tex
@@ -147,6 +147,7 @@
 \newcommand{\gui}{graphical user interface }
 \newcommand{\ipp}{information privacy practices }
 \newcommand{\aiprat}{automated information privacy risk assessment tool }
+\newcommand{\nbc}{naive Bayes classifier }
 
 \pagenumbering{Roman}
 
