--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -7,9 +7,11 @@
 	\acro{DEX}{Dalvik Executable}
 	\acro{DRM}{Digital Rights Management}
 	\acro{HTTP}{Hypertext Transfer Protocol}
+	\acro{HTML}{Hypertext Markup Language}
 	\acro{JAR}{Java Archive}
 	\acro{JVM}{Java Virtual Machine}
     \acro{mHealth}{Mobile Health}
+    \acro{URL}{Uniform Resource Locator}
     \acro{XML}{Extensible Markup Language}
 \end{acronym}
 \newpage
