--- a/main.tex
+++ b/main.tex
@@ -148,6 +148,7 @@
 \newcommand{\ipp}{information privacy practices }
 \newcommand{\aiprat}{automated information privacy risk assessment tool }
 \newcommand{\nbc}{naive Bayes classifier }
+\newcommand{\AIPRAT}{\textit{AIPRAT}}
 
 \pagenumbering{Roman}
 
