--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 \usepackage[english]{babel}
 \selectlanguage{english}
 \usepackage{nicefrac}
+\usepackage{latexsym}
 
 % Title font sizes
 \usepackage{titlesec}
