--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -11,6 +11,7 @@
 	\acro{JAR}{Java Archive}
 	\acro{JVM}{Java Virtual Machine}
     \acro{mHealth}{Mobile Health}
+    \acro{P3P}{Platform for Privacy Preferences}
     \acro{URL}{Uniform Resource Locator}
     \acro{XML}{Extensible Markup Language}
 \end{acronym}
