--- a/titlepages/cv.tex
+++ b/titlepages/cv.tex
@@ -26,7 +26,7 @@
 % Grundwehrdienst
 \begin{tabular}{p{11em} p{22.5em}}
     \textbf{Grundwehrdienst} & \addspace \\
-    07/2009 - 04/2010 & \raggedright Wehrdienstleistender, Luftwaffe - Jagdbombergeschwader 31 "Boelke", KvD für das Wachpersonal, Fliegerhorst Nörvenich \\
+    07/2009 - 04/2010 & \raggedright Wehrdienstleistender, Luftwaffe - JaboG 31 "Boelke", Kraftfahrer vom Dienst, Fliegerhorst Nörvenich \\
 \end{tabular}
 
 \vspace{-1.5em}
