--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -6,6 +6,7 @@
 	\acro{APK}{Android Application Package}
 	\acro{DEX}{Dalvik Executable}
 	\acro{DRM}{Digital Rights Management}
+	\acro{GPS}{Global Positioning System}
 	\acro{HTTP}{Hypertext Transfer Protocol}
 	\acro{HTML}{Hypertext Markup Language}
 	\acro{JAR}{Java Archive}
