--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -13,6 +13,7 @@
 	\acro{JVM}{Java Virtual Machine}
     \acro{mHealth}{Mobile Health}
     \acro{P3P}{Platform for Privacy Preferences}
+    \acro{TCP/IP}{Transmission Control Protocol / Internet Protocol}
     \acro{URL}{Uniform Resource Locator}
     \acro{XML}{Extensible Markup Language}
 \end{acronym}
