--- a/main.tex
+++ b/main.tex
@@ -172,10 +172,17 @@
 \include{titlepages/acronyms}
 
 % -------------------
-% Table of tables
+% List of tables
 % -------------------
 \listoftables
-\addcontentsline{toc}{section}{Table of tables}
+\addcontentsline{toc}{section}{List of tables}
+\newpage
+
+% -------------------
+% List of figures
+% -------------------
+\listoffigures
+\addcontentsline{toc}{section}{List of Figures}
 \newpage
 
 \normalsize
