--- a/main.tex
+++ b/main.tex
@@ -127,10 +127,10 @@
 \begin{document}
 
 % Renews
-\renewcommand{\figurename}{Figure}
-\renewcommand{\tablename}{Table}
+\renewcommand{\figurename}{Fig.}
+\renewcommand{\tablename}{Tab.}
 \renewcommand\thefigure{\arabic{section}-\arabic{figure}}
-\renewcommand\thetable{Tab. \arabic{section}-\arabic{table}}
+\renewcommand\thetable{\arabic{section}-\arabic{table}}
 \newcommand{\todo}[1]{\textbf{\textsc{\textcolor{red}{TODO: #1}}}}
 
 % Variables
