--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -8,6 +8,7 @@
 	\acro{DRM}{Digital Rights Management}
 	\acro{GPS}{Global Positioning System}
 	\acro{HTTP}{Hypertext Transfer Protocol}
+	\acro{HTTPS}{Hypertext Transfer Protocol Secure}
 	\acro{HTML}{Hypertext Markup Language}
 	\acro{JAR}{Java Archive}
 	\acro{JVM}{Java Virtual Machine}
