--- a/main.tex
+++ b/main.tex
@@ -18,6 +18,7 @@
 \selectlanguage{english}
 \usepackage{nicefrac}
 \usepackage{latexsym}
+\usepackage{hyperref}
 
 % Title font sizes
 \usepackage{titlesec}
