--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -13,6 +13,7 @@
 	\acro{JAR}{Java Archive}
 	\acro{JVM}{Java Virtual Machine}
     \acro{mHealth}{Mobile Health}
+    \acro{NFC}{Near Field Communication}
     \acro{P3P}{Platform for Privacy Preferences}
     \acro{TCP/IP}{Transmission Control Protocol / Internet Protocol}
     \acro{URL}{Uniform Resource Locator}
