--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \selectlanguage{english}
 \usepackage{nicefrac}
 \usepackage{latexsym}
-\usepackage{hyperref}
+\PassOptionsToPackage{hyphens}{url}\usepackage{hyperref}
 
 % Title font sizes
 \usepackage{titlesec}
