--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -10,6 +10,7 @@
 	\acro{HTTP}{Hypertext Transfer Protocol}
 	\acro{HTTPS}{Hypertext Transfer Protocol Secure}
 	\acro{HTML}{Hypertext Markup Language}
+	\acro{IP}{Internet Protocol}
 	\acro{JAR}{Java Archive}
 	\acro{JVM}{Java Virtual Machine}
     \acro{mHealth}{Mobile Health}
