--- a/titlepages/acronyms.tex
+++ b/titlepages/acronyms.tex
@@ -17,6 +17,7 @@
     \acro{NFC}{Near Field Communication}
     \acro{P3P}{Platform for Privacy Preferences}
     \acro{TCP/IP}{Transmission Control Protocol / Internet Protocol}
+    \acro{URI}{Uniform Resource Identifier}
     \acro{URL}{Uniform Resource Locator}
     \acro{UUID}{Universally Unique Identifier}
     \acro{XML}{Extensible Markup Language}
