--- a/main.tex
+++ b/main.tex
@@ -212,6 +212,7 @@
 % ---------
 % Appendix
 % ---------
+\include{titlepages/appendices}
 \include{titlepages/declaration}
 \include{titlepages/cv}
 
