--- a/main.tex
+++ b/main.tex
@@ -152,6 +152,7 @@
 \newcommand{\aiprat}{automated information privacy risk assessment tool }
 \newcommand{\nbc}{naive Bayes classifier }
 \newcommand{\AIPRAT}{\textit{AIPRAT} }
+\newcommand{\ml}{machine learning }
 
 \pagenumbering{Roman}
 
