--- a/titlepages/appendices.tex
+++ b/titlepages/appendices.tex
@@ -1,9 +1,11 @@
 \addcontentsline{toc}{section}{Appendices}
 \section*{Appendices}
 
+To be found within digital attachment:
+
 \subsection*{Appendix A}
 
-\textit{/appendices/Results.xlsx}. 
+\textit{/appendices/Results.xlsx}
 
 A list of the found/not-found results of information privacy risks per information privacy practice, detected by the coherent \AIPRAT strategies.
 The table includes summerizations of the occurance of each strategy result and the total number of found strategy results per inspected app.
