--- a/main.tex
+++ b/main.tex
@@ -103,8 +103,7 @@
     url=false,
     doi=false,
     maxcitenames=3,
-    maxbibnames=30,
-    backend=bibtex
+    maxbibnames=30
 ]{biblatex}
 \addbibresource{library.bib}
 \let\cite\textcite
